Fix bubbles position on smaller screen

--- a/src/componenets/Contents/overlay.css
+++ b/src/componenets/Contents/overlay.css
@@ -840,7 +840,7 @@
   }
   .bubbles :nth-child(2) {
     background-size: auto 40%;
-    left: -35%;
+    left: -45%;
   }
 
   .bubbles :nth-child(3) {
@@ -849,22 +849,23 @@
   }
   .bubbles :nth-child(4) {
     background-size: auto 110%;
-    left: -5%;
+    top: 50%;
+    left: 15%;
   }
   .bubbles :nth-child(5) {
     background-size: auto 80%;
     top: 60%;
-    left: -25%;
+    left: -22%;
   }
   .bubbles :nth-child(6) {
     background-size: auto 70%;
     top: 70%;
-    left: 10%;
+    left: 5%;
   }
   .bubbles :nth-child(7) {
     background-size: auto 50%;
-    top: 50%;
-    left: -0%;
+    top: 40%;
+    left: -15%;
   }
   .bubbles :nth-child(8) {
     background-size: auto 50%;
